# tcfinder

./: .travis.yml  Cargo.toml  LICENSE  README.org  build.rs
c_src/: gfmul.c
src/: aes.rs  gf2n.rs  main.rs  partitioninfo.rs  tcfinder.rs  xts.rs
