[package]
name = "tcfinder"
version = "0.1.0"
authors = ["Semih Helvaci <semih.helvaci92@gmail.com>"]

build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
clippy = "0.0.90"
rust-crypto = "0.2.36"
num = "0.1"
time = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"
threadpool = "1.3.1"
pbr = "0.2.1"

[profile.release]
lto = true
