[package]
name = "tcfinder"
version = "0.1.0"
authors = ["Semih Helvaci <semih.helvaci92@gmail.com>"]

build = "build.rs"

[build-dependencies]
gcc = "0.3.45"

[dependencies]
clippy = "0.0.191"
rust-crypto = "0.2.36"
num = "0.1.37"
time = "0.1.37"
docopt = "0.7.0"
rustc-serialize = "0.3.24"
threadpool = "1.3.2"
pbr = "1.0.0"

[profile.release]
lto = true
